[gd_scene load_steps=19 format=2]

[ext_resource path="res://monstro_T0.gd" type="Script" id=1]
[ext_resource path="res://Imagens_novas/Monstros/Green_Less_knight/Zombie_Less_Green_Standing.png" type="Texture" id=2]
[ext_resource path="res://Imagens_novas/Monstros/Green_Less_knight/Zombie_Less_Green_PrepareAlpha.png" type="Texture" id=3]
[ext_resource path="res://Imagens_novas/Monstros/Green_Less_knight/Zombie_Less_Green_Prepare.png" type="Texture" id=4]
[ext_resource path="res://imagens/huhuhuhhuhu3.png" type="Texture" id=5]
[ext_resource path="res://Imagens_novas/Monstros/Green_Less_knight/Zombie_Less_Green_Hurt.png" type="Texture" id=6]
[ext_resource path="res://Imagens_novas/Monstros/Green_Less_knight/Zombie_Less_Green_Attacking.png" type="Texture" id=7]
[ext_resource path="res://imagens/monter ataque2.png" type="Texture" id=8]
[ext_resource path="res://stun.tres" type="SpriteFrames" id=9]
[ext_resource path="res://life_monsters.tscn" type="PackedScene" id=10]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Sound_Design/Alerts/Alert A.wav" type="AudioStream" id=12]
[ext_resource path="res://Sound_Design/Enemy Base/MonsterDie.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 284.416, 287.7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 437.91, 10 )

[sub_resource type="Animation" id=4]
resource_name = "morte"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprites_monstro:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "monstro_morreu"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprites_monstro:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[sub_resource type="DynamicFont" id=5]
size = 61
font_data = ExtResource( 11 )

[node name="monstro_T0" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="sprites_monstro" type="AnimatedSprite" parent="."]
modulate = Color( 0.933333, 0.933333, 0.933333, 1 )
frames = SubResource( 1 )
animation = "New Anim"

[node name="shape_colisao" type="CollisionShape2D" parent="."]
position = Vector2( 104.175, 38.0805 )
scale = Vector2( -0.599622, 0.890627 )
shape = SubResource( 2 )

[node name="area_ataque" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="shape_ataque" type="CollisionShape2D" parent="area_ataque"]
position = Vector2( -394.608, 116.114 )
scale = Vector2( -0.713747, -0.713747 )
shape = SubResource( 3 )

[node name="animacoes" type="AnimationPlayer" parent="."]
anims/morte = SubResource( 4 )

[node name="stun" type="AnimatedSprite" parent="."]
position = Vector2( 123.501, -187.234 )
frames = ExtResource( 9 )
animation = "colorido"
frame = 3
playing = true

[node name="life" parent="." instance=ExtResource( 10 )]

[node name="instructions" type="Label" parent="."]
visible = false
margin_left = -596.512
margin_top = -560.498
margin_right = 520.488
margin_bottom = -498.498
custom_fonts/font = SubResource( 5 )
text = "Turn into stone to defend the attacks."

[node name="hit" type="Label" parent="."]
visible = false
margin_left = -596.512
margin_top = -498.673
margin_right = 471.488
margin_bottom = -436.673
custom_fonts/font = SubResource( 5 )
text = "Touch the screen to hit the monster!"

[node name="alertA" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = 24.0
